--- a/js/components/admin/attribute/views/index.tmpl
+++ b/js/components/admin/attribute/views/index.tmpl
@@ -1,8 +1,8 @@
-<div id="componentTypeManipulation">
+<div id="attributeManipulation">
 
-    <div class="btn btn-primary" id="addComponentType">Добавить тип компонента</div>
+    <div class="btn btn-primary" id="addAttribute">Добавить атрибут</div>
 
-    <div class="componentTypeQuantity">
+    <div class="attributeQuantity">
         Количество на странице:
     </div>
     <div class='btn-group'>
@@ -19,6 +19,6 @@
 
 <div class="clear"></div>
 
-<div id="componentTypesList">
+<div id="attributesList">
 
 </div>
